--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <!--layout: header-->
     <div class="row">
-      <div class="col-12 grid-block">
+      <div class="col-xl-12 grid-block">
 
         <!--bootstrap navbar start-->
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand">Claudia Love Petty</a>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(255, 233, 237)">
+          <a class="navbar-brand" style="color: rgb(233, 101, 123);">Claudia Love Petty</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,13 +46,10 @@
     </div>
 
 <!--layout: body-->
-    <div class="row">
-      <div class="col-2 grid-block">
-      </div>
-      <div class="col-9 grid-block">
+
         <!--bootstrap img/text card-->
         <div class="card">
-          <div class="card-header">
+          <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(34, 151, 140);">
             About Me
           </div>
           <div class="card-body">
@@ -60,30 +57,22 @@
               <img src="unnamed.jpg" alt="it me" style="height: 150px; width: 130px;">
             </div>
           </div>
-          <div class="single-post-content-wrapper p-3">
-            <p>Agile web developer with strong communication and collaboration skills. Obsessed with design, quality,
-              and
-              logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized
-              and
-              beautiful place.
+          <div class="single-post-content-wrapper p-3" style="color:rgb(73, 10, 73)">
+             <p>Agile web developer with strong communication and   collaboration skills. Obsessed with design, quality,and
+             logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized
+             and beautiful place.
 
               <p>Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as
-                much as
-                it does our business activity.
+              much as
+              it does our business activity.
 
-                <p>With a decade in software development support as a quality assurance engineer, business and systems
-                  analyst, and scrum coach and scrum master, I am grateful for a journey that has brought me into
-                  development
-                  in a humble and access</p>
+              <p>With a decade in software development support as a quality assurance engineer, business-systems
+              analyst, and scrum coach and scrum master, I am grateful for a journey that has brought me into
+              development in a humble and accessible way.</p>
               </p>
             </p>
           </div>
         </div>
-        <!-- end bootstrap body card-->
-      </div>
-      <div class="col-2 grid-block">
-      </div>
-    </div>
 
 
 
@@ -91,7 +80,7 @@
     <div class="row">
       <div class="col-12 grid-block">
         <!-- bootstrap footer -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
+        <div class="footer-copyright text-center py-3" style="color:rgb(73, 10, 73);">© 2020 Copyright</div>
         <!-- bootstrap footer-->
       </div>
     </div>
