final updates to all files to submit for homework

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 <body>
   <div class="container-fluid">
 
-<!--layout: header-->
+    <!--layout: header-->
     <div class="row">
       <div class="col-xl-12 grid-block">
-
         <!--bootstrap navbar start-->
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(255, 233, 237)">
           <a class="navbar-brand" style="color: rgb(233, 101, 123);">Claudia Love Petty</a>
@@ -45,38 +44,36 @@
       </div>
     </div>
 
-<!--layout: body-->
+    <!--layout: body-->
 
-        <!--bootstrap img/text card-->
-        <div class="card">
-          <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(34, 151, 140);">
-            About Me
-          </div>
-          <div class="card-body">
-            <div class="image-wrapper float-left pr-3">
-              <img src="unnamed.jpg" alt="it me" style="height: 150px; width: 130px;">
-            </div>
-          </div>
-          <div class="single-post-content-wrapper p-3" style="color:rgb(73, 10, 73)">
-             <p>Agile web developer with strong communication and   collaboration skills. Obsessed with design, quality,and
-             logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized
-             and beautiful place.
+    <!--bootstrap img/text card-->
+    <div class="card">
+      <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(11, 87, 79);">
+        About Me
+      </div>
+      <div class="card-body">
+        <div class="image-wrapper float-left pr-3">
+          <img src="unnamed.jpg" alt="it me" style="height: 150px; width: 130px;">
+        </div>
+      </div>
+      <div class="single-post-content-wrapper p-3" style="color:rgb(73, 10, 73)">
+        <p>Agile web developer with strong communication and collaboration skills. Obsessed with design, quality,and
+          logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized
+          and beautiful place.
 
-              <p>Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as
-              much as
-              it does our business activity.
+          <p>Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as
+            much as
+            it does our business activity.
 
-              <p>With a decade in software development support as a quality assurance engineer, business-systems
+            <p>With a decade in software development support as a quality assurance engineer, business-systems
               analyst, and scrum coach and scrum master, I am grateful for a journey that has brought me into
               development in a humble and accessible way.</p>
-              </p>
-            </p>
-          </div>
-        </div>
+          </p>
+        </p>
+      </div>
+    </div>
 
-
-
-  <!--layout: footer-->
+    <!--layout: footer-->
     <div class="row">
       <div class="col-12 grid-block">
         <!-- bootstrap footer -->
@@ -84,15 +81,18 @@
         <!-- bootstrap footer-->
       </div>
     </div>
-
-
   </div>
 
-
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!--links for bootstrap javascript-->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.gnet/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
 </body>
-
 </html>
