--- a/contact.html
+++ b/contact.html
@@ -47,25 +47,104 @@
 
 <!--layout: body-->
 
-        <!--bootstrap img/text card-->
-
-
-
-
+<div class="card">
+  <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(11, 87, 79);">
+    Contact
+  </div>
+  <div class="card-body">
+    <div class="image-wrapper float-left pr-3">
+     
+      
+<!--Section: Contact v.2-->
+<section class="mb-4">
+  <!--Section description-->
+  <p class="text-center w-responsive mx-auto mb-5">This is one of my first major sites! Send me a note and let me know what you think!</p>
+  <div class="row">
+      <!--Grid column-->
+      <div class="col-md-9 mb-md-0 mb-5" style="color:rgb(73, 10, 73);">
+          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+              <!--Grid row-->
+              <div class="row">
+                  <!--Grid column-->
+                  <div class="col-md-6">
+                      <div class="md-form mb-0">
+                          <input type="text" id="name" name="name" class="form-control">
+                          <label for="name" class="">Your name</label>
+                      </div>
+                  </div>
+                  <!--Grid column-->
+                  <!--Grid column-->
+                  <div class="col-md-6">
+                      <div class="md-form mb-0" style="color:rgb(73, 10, 73);">
+                          <input type="text" id="email" name="email" class="form-control">
+                          <label for="email" class="">Your email</label>
+                      </div>
+                  </div>
+                  <!--Grid column-->
+              </div>
+              <!--Grid row-->
+              <!--Grid row-->
+              <div class="row">
+                  <div class="col-md-12" style="color:rgb(73, 10, 73);">
+                      <div class="md-form mb-0">
+                          <input type="text" id="subject" name="subject" class="form-control">
+                          <label for="subject" class="">Subject</label>
+                      </div>
+                  </div>
+              </div>
+              <!--Grid row-->
+              <!--Grid row-->
+              <div class="row">
+                  <!--Grid column-->
+                  <div class="col-md-12" style="color:rgb(73, 10, 73);">
+                      <div class="md-form">
+                          <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                          <label for="message">Your message</label>
+                      </div>
+                  </div>
+              </div>
+              <!--Grid row-->
+          </form>
+          <div class="text-center text-md-left">
+              <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+          </div>
+          <div class="status"></div>
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-md-3 text-center" style="color:rgb(73, 10, 73);">
+          <ul class="list-unstyled mb-0">
+              <li><i class="fas fa-map-marker-alt fa-2x"style="color:rgb(73, 10, 73);"></i>
+                  <p>Fairfax, VA 22030, USA</p>
+              </li>
+              <li><i class="fas fa-phone mt-4 fa-2x" style="color:rgb(73, 10, 73);"></i>
+                  <p>(703)597-4202</p>
+              </li>
+              <li><i class="fas fa-envelope mt-4 fa-2x" style="color:rgb(73, 10, 73);"></i>
+                  <p>claudialove32@gmail.com</p>
+              </li>
+          </ul>
+      </div>
+      <!--Grid column-->
+  </div>
+</section>
+<!--Section: Contact v.2-->
+    </div>
+  </div>
+</div>
   <!--layout: footer-->
     <div class="row">
-      <div class="col-12 grid-block">
+      <div class="col-12 grid-block" style="color:rgb(73, 10, 73);">
         <!-- bootstrap footer -->
         <div class="footer-copyright text-center py-3" style="color:rgb(73, 10, 73);">© 2020 Copyright</div>
         <!-- bootstrap footer-->
       </div>
     </div>
-
-
   </div>
+
+<!--javascript links for bootstrap-->  
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-
 </html>
