--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                   src="learning-web-dev.png" class="card-img-top"
                   alt="learning web development" style="width: 150px; height:150px;">
               </a>
-              <div class="card-body" style="color:rgb(73, 10, 73);">
+              <div class="card-body">
                 <h5 class="card-title">Prework</h5>
                 <p class="card-text">This is a bio page showing the use of git forking.</p>
 
@@ -71,7 +71,7 @@
                   src="float-css.png"
                   class="card-img-top" alt="float" style="width: 150px; height:150px;">
               </a>
-              <div class="card-body" style="color:rgb(73, 10, 73);">
+              <div class="card-body">
                 <h5 class="card-title">Bio with Float</h5>
                 <p class="card-text">This is a bio page showing the use of float in css.</p>
               </div>
@@ -81,7 +81,7 @@
                   src="accessibility.png" class="card-img-top" alt="accessibility"
                   style="width: 150px; height:150px;">
               </a>
-              <div class="card-body" style="color:rgb(73, 10, 73);">
+              <div class="card-body">
                 <h5 class="card-title">Accessibility Added</h5>
                 <p class="card-text">This is a site marked up to support accessibility.</p>
               </div>
