--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
           <div class="card-group">
             <div class="card-portfolio">
               <a href="https://claudialove.github.io/ prework-about-me/"><img
-                  src="learning-web-dev.png" class="card-img-top"
+                  src="learning-web-dev.jpg" class="card-img-top"
                   alt="learning web development" style="width: 150px; height:150px;">
               </a>
               <div class="card-body">
@@ -68,7 +68,7 @@
             </div>
             <div class="card-portfolio">
               <a href="https://claudialove.github.io/student-bio/"><img
-                  src="float-css.png"
+                  src="float-css.jpg"
                   class="card-img-top" alt="float" style="width: 150px; height:150px;">
               </a>
               <div class="card-body">
@@ -78,7 +78,7 @@
             </div>
             <div class="card-portfolio">
               <a href="https://claudialove.github.io/homework_02/"><img
-                  src="accessibility.png" class="card-img-top" alt="accessibility"
+                  src="accessibility.jpg" class="card-img-top" alt="accessibility"
                   style="width: 150px; height:150px;">
               </a>
               <div class="card-body">
