pushing some touch ups even though it's past submission time

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container-fluid">
 
-<!--layout: header-->
+    <!--layout: header-->
     <div class="row">
       <div class="col-xl-12 grid-block">
         <!--bootstrap navbar start-->
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-<!--layout: body-->
+    <!--layout: body-->
 
     <!--bootstrap img/text card-->
     <div class="card">
@@ -56,9 +56,8 @@
           <!-- nested card groups-->
           <div class="card-group">
             <div class="card-portfolio">
-              <a href="https://claudialove.github.io/ prework-about-me/"><img
-                  src="learning-web-dev.jpg" class="card-img-top"
-                  alt="learning web development" style="width: 150px; height:150px;">
+              <a href="https://claudialove.github.io/ prework-about-me/"><img src="learning-web-dev.jpg"
+                  class="card-img-top" alt="learning web development" style="width: 150px; height:150px;">
               </a>
               <div class="card-body">
                 <h5 class="card-title">Prework</h5>
@@ -67,9 +66,8 @@
               </div>
             </div>
             <div class="card-portfolio">
-              <a href="https://claudialove.github.io/student-bio/"><img
-                  src="float-css.jpg"
-                  class="card-img-top" alt="float" style="width: 150px; height:150px;">
+              <a href="https://claudialove.github.io/student-bio/"><img src="float-css.jpg" class="card-img-top"
+                  alt="float" style="width: 150px; height:150px;">
               </a>
               <div class="card-body">
                 <h5 class="card-title">Bio with Float</h5>
@@ -77,9 +75,8 @@
               </div>
             </div>
             <div class="card-portfolio">
-              <a href="https://claudialove.github.io/homework_02/"><img
-                  src="accessibility.jpg" class="card-img-top" alt="accessibility"
-                  style="width: 150px; height:150px;">
+              <a href="https://claudialove.github.io/homework_02/"><img src="accessibility.jpg" class="card-img-top"
+                  alt="accessibility" style="width: 150px; height:150px;">
               </a>
               <div class="card-body">
                 <h5 class="card-title">Accessibility Added</h5>
@@ -87,17 +84,20 @@
               </div>
             </div>
           </div>
-          <!-- end nested card groups-->
 
-  <!--layout: footer-->
+          <!-- end nested card groups-->
+          <!--layout: footer-->
+          <!--layout: footer-->
+
           <div class="row">
-            <div class="col-12 grid-block">
+            <div class="col-12 grid-block" style="color:rgb(73, 10, 73);">
               <!-- bootstrap footer -->
               <div class="footer-copyright text-center py-3" style="color:rgb(73, 10, 73);">© 2020 Copyright</div>
               <!-- bootstrap footer-->
             </div>
           </div>
-        </div>
+ 
+
 
   <!--links for bootstrap javascript-->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
