--- a/contact.html
+++ b/contact.html
@@ -2,140 +2,62 @@
 <html lang="en">
 
 <head>
-  <!--import favorite font-->
-  <!--import bootstrap lib-->
+  <!--google font embed-->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
+  <!--bootstrap cdn-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style-index.css" />
-  <title>About</title>
+  <!-- local style sheet -->
+  <link rel="stylesheet" href="assets/style.css" />
+  <title>contact</title>
 </head>
 
 <body>
-  <div class="container-fluid">
+  <!--layout nav-->
+  <nav>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-    <!--layout: header-->
-    <div class="row">
-      <div class="col-xl-12 grid-block">
-
-        <!--bootstrap navbar start-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(255, 233, 237)">
-          <a class="navbar-brand" style="color: rgb(233, 101, 123);">Claudia Love Petty</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <!--bootstrap navbar end-->
-      </div>
+  <!--layout: body-->
+  <div class="container" id="top-of-form">
+    <div style="text-align:center">
+      <h2>Contact Me</h2>
+      <p>Like what you see? Leave me a note!</p>
     </div>
-
-    <!--layout: body-->
-
-    <div class="card">
-      <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(11, 87, 79);">
-        Contact
-      </div>
-      <div class="card-body">
-        <div class="image-wrapper float-left pr-3">
-
-
-          <!--Section: Contact v.2-->
-          <section class="mb-4">
-            <!--Section description-->
-            <p class="text-center w-responsive mx-auto mb-5">This is one of my first major sites! Send me a note and let
-              me know what you think!</p>
-            <div class="row">
-              <!--Grid column-->
-              <div class="col-md-9 mb-md-0 mb-5" style="color:rgb(73, 10, 73);">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-                  <!--Grid row-->
-                  <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                      <div class="md-form mb-0">
-                        <input type="text" id="name" name="name" class="form-control">
-                        <label for="name" class="">Your name</label>
-                      </div>
-                    </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                      <div class="md-form mb-0" style="color:rgb(73, 10, 73);">
-                        <input type="text" id="email" name="email" class="form-control">
-                        <label for="email" class="">Your email</label>
-                      </div>
-                    </div>
-                    <!--Grid column-->
-                  </div>
-                  <!--Grid row-->
-                  <!--Grid row-->
-                  <div class="row">
-                    <div class="col-md-12" style="color:rgb(73, 10, 73);">
-                      <div class="md-form mb-0">
-                        <input type="text" id="subject" name="subject" class="form-control">
-                        <label for="subject" class="">Subject</label>
-                      </div>
-                    </div>
-                  </div>
-                  <!--Grid row-->
-                  <!--Grid row-->
-                  <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12" style="color:rgb(73, 10, 73);">
-                      <div class="md-form">
-                        <textarea type="text" id="message" name="message" rows="2"
-                          class="form-control md-textarea"></textarea>
-                        <label for="message">Your message</label>
-                      </div>
-                    </div>
-                  </div>
-                  <!--Grid row-->
-                </form>
-                <div class="text-center text-md-left">
-                  <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
-                </div>
-                <div class="status"></div>
-              </div>
-              <!--Grid column-->
-
-            </div>
-          </section>
-          <!--Section: Contact v.2-->
-        </div>
-      </div>
-    </div>
-    <!--layout: footer-->
     <div class="row">
-      <div class="col-12 grid-block" style="color:rgb(73, 10, 73);">
-        <!-- bootstrap footer -->
-        <div class="footer-copyright text-center py-3" style="color:rgb(73, 10, 73);">© 2020 Copyright</div>
-        <!-- bootstrap footer-->
+      <div class="column">
+      </div>
+      <div class="column">
+        <form action="/action_page.php">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+          <label for="subject">Subject</label>
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+          <input type="submit" value="Submit">
+        </form>
       </div>
     </div>
   </div>
 
-  <!--javascript links for bootstrap-->
+  <!-- layout footer -->
+  <div class="footer">
+    <p>
+      <h6>&copy copyright 2020</h6>
+    </p>
+  </div>
+
+  <!--links for bootstrap javascript-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
