--- a/index.html
+++ b/index.html
@@ -2,97 +2,61 @@
 <html lang="en">
 
 <head>
-  <!--import favorite font-->
-  <!--import bootstrap lib-->
+  <!--google font embed-->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
+  <!--bootstrap cdn-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style-index.css" />
+  <!-- local style sheet -->
+  <link rel="stylesheet" href="assets/style.css" />
   <title>About</title>
 </head>
 
 <body>
+  <!--layout: header-->
+  <nav>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!--layout: body-->
   <div class="container-fluid">
-
-    <!--layout: header-->
-    <div class="row">
-      <div class="col-xl-12 grid-block">
-        <!--bootstrap navbar start-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(255, 233, 237)">
-          <a class="navbar-brand" style="color: rgb(233, 101, 123);">Claudia Love Petty</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <!--bootstrap navbar end-->
-      </div>
-    </div>
-
-    <!--layout: body-->
-
-    <!--bootstrap img/text card-->
-    <div class="card">
-      <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(11, 87, 79);">
-        About Me
-      </div>
-      <div class="card-body">
-        <div class="image-wrapper float-left pr-3">
-          <img src="unnamed.jpg" alt="it me" style="height: 150px; width: 130px;">
-        </div>
-      </div>
-      <div class="single-post-content-wrapper p-3" style="color:rgb(73, 10, 73)">
-        <p>Agile web developer with strong communication and collaboration skills. Obsessed with design, quality,and
-          logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized
-          and beautiful place.
-
-          <p>Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as
-            much as
-            it does our business activity.
-
-            <p>With a decade in software development support as a quality assurance engineer, business-systems
-              analyst, and scrum coach and scrum master, I am grateful for a journey that has brought me into
-              development in a humble and accessible way.</p>
-          </p>
-        </p>
-      </div>
-    </div>
-
-    <!--layout: footer-->
-    <div class="row">
-      <div class="col-12 grid-block">
-        <!-- bootstrap footer -->
-        <div class="footer-copyright text-center py-3" style="color:rgb(73, 10, 73);">© 2020 Copyright</div>
-        <!-- bootstrap footer-->
-      </div>
+    <div class="jumbotron">
+      <h4 class="display-5"><img src="assets/current_me.jpg" alt="it me" style="height: 150px; width: 150px;"><span
+          id="name">Claudia Love Petty</span></h4>
+      <p>Agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and
+        logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized and
+        beautiful place.</p>
+      <p>Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as
+        it does our business activity.</p>
+      <p>With a decade in software development support as a QA engineer, analyst, and scrum coach and scrum master; I
+        lead with cross-functionality and natural collaboration.</p>
     </div>
   </div>
 
-<!--links for bootstrap javascript-->
+  <!--layout: footer-->
+  <div class="footer">
+    <p>
+      <h6>&copy copyright 2020</h6>
+    </p>
+  </div>
+  </div>
+
+
+  <!--links for bootstrap javascript-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.gnet/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 
 </body>
+
 </html>
