--- a/portfolio.html
+++ b/portfolio.html
@@ -2,112 +2,79 @@
 <html lang="en">
 
 <head>
-  <!--import favorite font-->
-  <!--import bootstrap lib-->
+  <!--google font embed-->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
+  <!--bootstrap cdn-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style-index.css" />
-  <title>About</title>
+  <!-- local style sheet -->
+  <link rel="stylesheet" href="assets/style.css" />
+  <title>portfolio</title>
 </head>
 
 <body>
+  <!--layout nav-->
+  <nav>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <!--layout body-->
   <div class="container-fluid">
-
-    <!--layout: header-->
     <div class="row">
-      <div class="col-xl-12 grid-block">
-        <!--bootstrap navbar start-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(255, 233, 237)">
-          <a class="navbar-brand" style="color: rgb(233, 101, 123);">Claudia Love Petty</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
+      <div class="col-12">
+        <div class="card-group">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">QUIZ GAME</h5>
+              <p class="card-text">a quiz about the color blue</p>
+              <p class="card-text">html-css-js</p>
+              <a href="https://claudialove.github.io/js-quiz-game/" class="btn btn-primary"
+                style="background:teal; border: 2px solid teal;">play game</a>
+            </div>
           </div>
-        </nav>
-        <!--bootstrap navbar end-->
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">WEATHER APP</h5>
+              <p class="card-text">check weather in your city</p>
+              <p class="card-text">html-css-js-jquery-bootstrap-ajax</p>
+              <a href="https://claudialove.github.io/weather-app/" class="btn btn-primary"
+                style="background:teal; border: 2px solid teal;">check weather</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">COVID DATA</h5>
+              <p class="card-text">a data dashboard by state</p>
+              <p class="card-text">jquery-bootstrap-ajax-animate.css</p>
+              <a href="https://koutron.github.io/Project-CoviDex/" class="btn btn-primary"
+                style="background:teal; border: 2px solid teal;">search data</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <!--layout: body-->
-
-    <!--bootstrap img/text card-->
-    <div class="card">
-      <div class="card-header" style="background-color: rgb(209, 228, 209); color: rgb(11, 87, 79);">
-        Portfolio
-      </div>
-      <div class="card-body">
-        <div class="image-wrapper float-left pr-3">
-          <!-- nested card groups-->
-          <div class="card-group">
-            <div class="card-portfolio">
-              <a href="https://claudialove.github.io/ prework-about-me/"><img src="learning-web-dev.jpg"
-                  class="card-img-top" alt="learning web development" style="width: 150px; height:150px;">
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">Prework</h5>
-                <p class="card-text">This is a bio page showing the use of git forking.</p>
-
-              </div>
-            </div>
-            <div class="card-portfolio">
-              <a href="https://claudialove.github.io/student-bio/"><img src="float-css.jpg" class="card-img-top"
-                  alt="float" style="width: 150px; height:150px;">
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">Bio with Float</h5>
-                <p class="card-text">This is a bio page showing the use of float in css.</p>
-              </div>
-            </div>
-            <div class="card-portfolio">
-              <a href="https://claudialove.github.io/homework_02/"><img src="accessibility.jpg" class="card-img-top"
-                  alt="accessibility" style="width: 150px; height:150px;">
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">Accessibility Added</h5>
-                <p class="card-text">This is a site marked up to support accessibility.</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- end nested card groups-->
-          <!--layout: footer-->
-          <!--layout: footer-->
-
-          <div class="row">
-            <div class="col-12 grid-block" style="color:rgb(73, 10, 73);">
-              <!-- bootstrap footer -->
-              <div class="footer-copyright text-center py-3" style="color:rgb(73, 10, 73);">© 2020 Copyright</div>
-              <!-- bootstrap footer-->
-            </div>
-          </div>
- 
+  </div>
+  <!-- layout footer -->
+  <div class="footer">
+    <p>
+      <h6>&copy copyright 2020</h6>
+    </p>
+  </div>
 
 
   <!--links for bootstrap javascript-->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-          integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-          crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-          crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
