--- a/contact.html
+++ b/contact.html
@@ -35,14 +35,14 @@
       <div class="column">
       </div>
       <div class="column">
-        <form action="/action_page.php">
+        <form method="post" action="mailto:claudialove32@gmail.com">
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your name..">
           <label for="lname">Last Name</label>
           <input type="text" id="lname" name="lastname" placeholder="Your last name..">
           <label for="subject">Subject</label>
           <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-          <input type="submit" value="Submit">
+          <input type="submit" value="Send Email">
         </form>
       </div>
     </div>
