add about page and links

--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <!--google font embed-->
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
-  <!--bootstrap cdn-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- local style sheet -->
-  <link rel="stylesheet" href="assets/style.css" />
-  <title>contact</title>
-</head>
+  <head>
+    <!--google font embed-->
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
+    <!--bootstrap cdn-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- local style sheet -->
+    <link rel="stylesheet" href="assets/style.css" />
+    <title>About</title>
+  </head>
 
 <body>
   <!--layout nav-->
   <nav>
     <ul class="nav">
-      <li><a href="index.html">Home</a></li>
+      <li id="name-about" ><a href="index.html">Claudia Love: </a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
