--- a/about.html
+++ b/about.html
@@ -29,7 +29,13 @@
 
   <!--layout: body-->
   <div class="container-fluid">
-      <div ><img id="index-img" src="https://wallpaperaccess.com/full/632200.jpg"></div>
+    <div class="jumbotron">
+      <div class="display-5">
+
+        <p><img src="assets/current_me.jpg" alt="it me" style="height: 150px; width: 150px;">Agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized and beautiful place.
+        Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as it does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum coach and scrum master; I lead with cross-functionality and natural collaboration.</p>
+        <a id="resume-link" href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing">My Resume</a>
+    </div>
   </div>
 
   <!--layout: footer-->
