final touches in new updates

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!--layout: body-->
   <div class="container-fluid">
-      <div ><img id="index-img" src="https://wallpaperaccess.com/full/632200.jpg"></div>
+      <div ><img id="index-img" src="https://i.pinimg.com/originals/a4/0f/52/a40f5229e2560ff577fc9db3fb37e696.png"></div>
   </div>
 
   <!--layout: footer-->
