--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!--google font embed-->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
@@ -13,25 +14,86 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- local style sheet -->
   <link rel="stylesheet" href="assets/style.css" />
-  <title>About</title>
+  <link rel="icon" href="https://cdn11.bigcommerce.com/s-4pg4qzd524/images/stencil/original/products/20671/16888/stcl1184-love-square-vintage-serif-pi__33236.1486165006.jpg?c=2">
+  <title>Claudia Love</title>
 </head>
 
 <body>
-  <!--layout: header-->
-  <nav>
-    <ul class="nav">
-      <li id="name-about" ><a href="index.html">Claudia Love: </a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <!--layout: body-->
-  <div class="container-fluid">
-      <div ><img id="index-img" src="https://i.pinimg.com/originals/a4/0f/52/a40f5229e2560ff577fc9db3fb37e696.png"></div>
+  <div class="name">
+    <h1>Claudia Love</h1>
   </div>
 
+  <!--layout: body-->
+ <div class="jumbotron" style="background-image: url(https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg); background-size: 100%;">
+     <div class="container for-about">
+     <p>An Agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized and beautiful place.
+      Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as it does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum coach and scrum master; I lead with cross-functionality and natural collaboration.</p>
+      <a href="https://github.com/claudialove" class="btn btn-primary"
+      style="background: rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);">My Github</a> 
+      <a href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing" class="btn btn-primary"
+      style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);">My Resume</a>
+      <a href="https://www.linkedin.com/in/claudia-petty-4198751a2/" class="btn btn-primary"
+      style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);">My LinkedIn</a>
+    </div>
+  </div>
+
+  <div class="portfolio-header-text">
+    <h2>Featured Projects</h2>
+  </div>
+  <div class="card-group">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">QUIZ GAME</h5>
+        <p class="card-text">a quiz about the color blue</p>
+        <p class="card-text">html-css-js</p>
+        <a href="https://claudialove.github.io/js-quiz-game/" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">play game</a>
+          <a href="https://claudialove.github.io/js-quiz-game/" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">see code</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">WEATHER APP</h5>
+        <p class="card-text">check weather in your city</p>
+        <p class="card-text">html-css-js-jquery-bootstrap-ajax</p>
+        <a href="https://claudialove.github.io/weather-app/" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">check weather</a>
+          <a href="https://claudialove.github.io/weather-app/" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">see code</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">COVID DATA</h5>
+        <p class="card-text">a data dashboard by state</p>
+        <p class="card-text">jquery-bootstrap-ajax-animate.css</p>
+        <a href="https://koutron.github.io/Project-CoviDex/" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">search data</a>
+          <a href="https://koutron.github.io/Project-CoviDex/" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">see code</a>
+      </div>
+    </div>
+  </div>
+
+  
+
+  <div class="Contact-header-text">
+    <h2>Contact Me</h2>
+  </div>
+  <div class = "container-fluid">
+  <div class="contact-card-group">
+    <div class="card">
+      <div class="card-body">
+        <img src="assets/current_me.jpg" alt="it me" style="height: 150px; width: 150px;">
+        <h5 class="card-title">Claudia Love</h5>
+        <p class="card-text">full stack web developer</p>
+        <p class="card-text">email: claudialove32@gmail.com</p>
+        <p class="card-text">phone: 703-597-4202</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!--layout: footer-->
   <div class="footer">
     <p>
