--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <!--bootstrap cdn-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <!-- flexibility on screens -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true">
   <!-- local style sheet -->
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="icon" href="https://cdn11.bigcommerce.com/s-4pg4qzd524/images/stencil/original/products/20671/16888/stcl1184-love-square-vintage-serif-pi__33236.1486165006.jpg?c=2">
