final style tweaks

--- a/index.html
+++ b/index.html
@@ -29,17 +29,14 @@
   </div>
 
   <!--layout: body-->
- <div class="jumbotron" style="background-image: url(https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg); background-size: 100%;">
-     <div class="container for-about">
-     <p>An Agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized and beautiful place.
+  <div class="jumbotron" style="background-image: url(https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg); background-size: 100%;">
+    <h1 class="display-4">About Me!</h1>
+    <p class="lead">An Agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized and beautiful place.
       Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as it does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum coach and scrum master; I lead with cross-functionality and natural collaboration.</p>
-      <a href="https://github.com/claudialove" class="btn btn-primary"
-      style="background: rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);">My Github</a> 
-      <a href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing" class="btn btn-primary"
-      style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);">My Resume</a>
-      <a href="https://www.linkedin.com/in/claudia-petty-4198751a2/" class="btn btn-primary"
-      style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);">My LinkedIn</a>
-    </div>
+    <hr class="my-4">
+    <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);" href="https://github.com/claudialove" role="button">My Github</a>
+    <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);" href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing" role="button">My Resume</a>
+    <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);" href="https://www.linkedin.com/in/claudia-petty-4198751a2/" role="button">My LinkedIn</a>
   </div>
 
   <div class="portfolio-header-text">
@@ -82,23 +79,18 @@
   </div>
 
   
+  <div class="card" style="width: 100%; height: 10%">
 
-  <div class="Contact-header-text">
-    <h2>Contact Me</h2>
-  </div>
-  <div class = "container-fluid">
-  <div class="contact-card-group">
-    <div class="card">
-      <div class="card-body">
-        <img src="assets/current_me.jpg" alt="it me" style="height: 150px; width: 150px;">
-        <h5 class="card-title">Claudia Love</h5>
-        <p class="card-text">full stack web developer</p>
-        <p class="card-text">email: claudialove32@gmail.com</p>
-        <p class="card-text">phone: 703-597-4202</p>
-        </div>
-      </div>
+    <div class="card-body" id= "contact-me">
+      <img src="assets/current_me.jpg" class="card-img-top" alt="me" style="height: 150px; width: 150px;">
+      <h5 class="card-title">Claudia Love</h5>
+      <p class="card-text">full stack web developer</p>
+      <p class="card-text">email: claudialove32@gmail.com</p>
+      <p class="card-text">phone: 703-597-4202</p>
+
     </div>
   </div>
+
   <!--layout: footer-->
   <div class="footer">
     <p>
