more responsiveness tweaks

--- a/index.html
+++ b/index.html
@@ -27,18 +27,34 @@
   <div class="name">
     <h1>Claudia Love</h1>
   </div>
+<!--layout: body-->
+<div class="jumbotron"
+  style="background-image: url(https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg); background-size: 100%;">
+  <h1 class="display-4">About Me!</h1>
+  <div>
 
-  <!--layout: body-->
-  <div class="jumbotron" style="background-image: url(https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg); background-size: 100%;">
-    <h1 class="display-4">About Me!</h1>
-    <p class="lead">An Agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and logical algorithms. Passionate about using technology to make the web a more useful, efficient, organized and beautiful place.
-      Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as it does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum coach and scrum master; I lead with cross-functionality and natural collaboration.</p>
-    <hr class="my-4">
-    <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);" href="https://github.com/claudialove" role="button">My Github</a>
-    <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);" href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing" role="button">My Resume</a>
-    <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);" href="https://www.linkedin.com/in/claudia-petty-4198751a2/" role="button">My LinkedIn</a>
+    <p class="lead">An Agile web developer with strong communication and collaboration skills. Obsessed with design,
+      quality, and logical algorithms. Passionate about using technology to make the web a more useful, efficient,
+      organized and beautiful place.
+      Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as it
+      does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum
+      coach and scrum master; I lead with cross-functionality and natural collaboration. 
+      <div>
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);"
+          href="https://github.com/claudialove" role="button">My Github</a>
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);"
+          href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing"
+          role="button">My Resume</a>
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);"
+          href="https://www.linkedin.com/in/claudia-petty-4198751a2/" role="button">My LinkedIn</a>
+        </div>
+    </p>
   </div>
+</div>
 
+  
+
+  <div class="container-fluid">
   <div class="portfolio-header-text">
     <h2>Featured Projects</h2>
   </div>
@@ -77,6 +93,8 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 
   
   <div class="card" style="width: 100%; height: 10%">
@@ -90,6 +108,7 @@
 
     </div>
   </div>
+</div>
 
   <!--layout: footer-->
   <div class="footer">
