button padding and updated links

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum
       coach and scrum master; I lead with cross-functionality and natural collaboration. 
       <div>
-        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);"
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); padding: 5px;"
           href="https://github.com/claudialove" role="button">My Github</a>
-        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);"
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); padding: 5px;"
           href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing"
           role="button">My Resume</a>
-        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168);"
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); padding: 5px;"
           href="https://www.linkedin.com/in/claudia-petty-4198751a2/" role="button">My LinkedIn</a>
        
     </p>
@@ -67,7 +67,7 @@
         <p class="card-text">html-css-js</p>
         <a href="https://claudialove.github.io/js-quiz-game/" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">play game</a>
-          <a href="https://claudialove.github.io/js-quiz-game/" class="btn btn-primary"
+          <a href="https://github.com/claudialove/js-quiz-game" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
       </div>
     </div>
@@ -78,7 +78,7 @@
         <p class="card-text">html-css-js-jquery-bootstrap-ajax</p>
         <a href="https://claudialove.github.io/weather-app/" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">check weather</a>
-          <a href="https://claudialove.github.io/weather-app/" class="btn btn-primary"
+          <a href="https://github.com/claudialove/weather-app" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
       </div>
     </div>
@@ -89,7 +89,7 @@
         <p class="card-text">jquery-bootstrap-ajax-animate.css</p>
         <a href="https://koutron.github.io/Project-CoviDex/" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">search data</a>
-          <a href="https://koutron.github.io/Project-CoviDex/" class="btn btn-primary"
+          <a href="https://github.com/claudialove/Project-CoviDex" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
       </div>
     </div>
