actually margin not padding

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       does our business activity. With a decade in software development support as a QA engineer, analyst, and scrum
       coach and scrum master; I lead with cross-functionality and natural collaboration. 
       <div>
-        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); padding: 5px;"
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 5px;"
           href="https://github.com/claudialove" role="button">My Github</a>
-        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); padding: 5px;"
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 5px;"
           href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing"
           role="button">My Resume</a>
-        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); padding: 5px;"
+        <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 5px;"
           href="https://www.linkedin.com/in/claudia-petty-4198751a2/" role="button">My LinkedIn</a>
        
     </p>
