featured back-end projects section added

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       coach and scrum master; I lead with cross-functionality and natural collaboration. 
       <div>
         <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 15px;"
-          href="https://github.com/claudialove" role="button">My Github</a>
+          href="https://github.com/claudialove" target="_blank" role="button">My Github</a>
         <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 15px;"
-          href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing"
+          href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing" target="_blank"
           role="button">My Resume</a>
         <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 15px;"
-          href="https://www.linkedin.com/in/claudia-petty-4198751a2/" role="button">My LinkedIn</a>
+          href="https://www.linkedin.com/in/claudia-petty-4198751a2/" target="_blank" role="button">My LinkedIn</a>
        
     </p>
   </div>
@@ -57,7 +57,7 @@
 
   <div class="container-fluid">
   <div class="portfolio-header-text">
-    <h2>Featured Projects</h2>
+    <h2>Featured Front-End Projects</h2>
   </div>
   <div class="card-group">
     <div class="card">
@@ -65,9 +65,9 @@
         <h5 class="card-title">QUIZ GAME</h5>
         <p class="card-text">a quiz about the color blue</p>
         <p class="card-text">html-css-js</p>
-        <a href="https://claudialove.github.io/js-quiz-game/" class="btn btn-primary"
+        <a href="https://claudialove.github.io/js-quiz-game/" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">play game</a>
-          <a href="https://github.com/claudialove/js-quiz-game" class="btn btn-primary"
+          <a href="https://github.com/claudialove/js-quiz-game" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
       </div>
     </div>
@@ -76,9 +76,9 @@
         <h5 class="card-title">WEATHER APP</h5>
         <p class="card-text">check weather in your city</p>
         <p class="card-text">html-css-js-jquery-bootstrap-ajax</p>
-        <a href="https://claudialove.github.io/weather-app/" class="btn btn-primary"
+        <a href="https://claudialove.github.io/weather-app/" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">check weather</a>
-          <a href="https://github.com/claudialove/weather-app" class="btn btn-primary"
+          <a href="https://github.com/claudialove/weather-app" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
       </div>
     </div>
@@ -87,9 +87,9 @@
         <h5 class="card-title">COVID DATA</h5>
         <p class="card-text">a data dashboard by state</p>
         <p class="card-text">jquery-bootstrap-ajax-animate.css</p>
-        <a href="https://koutron.github.io/Project-CoviDex/" class="btn btn-primary"
+        <a href="https://koutron.github.io/Project-CoviDex/" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">search data</a>
-          <a href="https://github.com/claudialove/Project-CoviDex" class="btn btn-primary"
+          <a href="https://github.com/claudialove/Project-CoviDex" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
       </div>
     </div>
@@ -97,7 +97,38 @@
 </div>
 </div>
 
-  
+
+<div class="container-fluid">
+  <div class="portfolio-header-text">
+    <h2>Featured Back-End Projects</h2>
+  </div>
+  <div class="card-group">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Readme-Generator</h5>
+        <p class="card-text">CLI outputs file</p>
+        <p class="card-text">node-inquirer (write object to file)</p>
+        <a href="assets/example-readme.png" target="_blank" class="btn btn-primary" 
+        style="background:teal; border: 2px solid teal;">example readme</a>
+          <a href="https://claudialove.github.io/cmd-line-readme-maker/" target="_blank" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">see code</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Team-Chart</h5>
+        <p class="card-text">CLI outputs dynamic html</p>
+        <p class="card-text">node-inquirer (use class constructors, render dynamic html)</p>
+        <a href="assets/example-output.png" target="_blank" class="btn btn-primary" 
+        style="background:teal; border: 2px solid teal;">example team-chart</a>
+          <a href="https://claudialove.github.io/team-chart/" target="_blank" class="btn btn-primary"
+          style="background:teal; border: 2px solid teal;">see code</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 
     <div class="card-body" id= "contact-me">
       <img src="assets/current_me.jpg" class="card-img-top" alt="me" style="height: 150px; width: 150px;">
