local links broken on git - attempting to fix

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h5 class="card-title">Readme-Generator</h5>
         <p class="card-text">CLI outputs file</p>
         <p class="card-text">node-inquirer (write object to file)</p>
-        <a href="assets/example-readme.png" target="_blank" class="btn btn-primary" 
+        <a href="..assets/example-readme.png" target="_blank" class="btn btn-primary" 
         style="background:teal; border: 2px solid teal;">example readme</a>
           <a href="https://claudialove.github.io/cmd-line-readme-maker/" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
@@ -119,7 +119,7 @@
         <h5 class="card-title">Team-Chart</h5>
         <p class="card-text">CLI outputs dynamic html</p>
         <p class="card-text">node-inquirer (use class constructors, render dynamic html)</p>
-        <a href="assets/example-output.png" target="_blank" class="btn btn-primary" 
+        <a href="..assets/example-output.png" target="_blank" class="btn btn-primary" 
         style="background:teal; border: 2px solid teal;">example team-chart</a>
           <a href="https://claudialove.github.io/team-chart/" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see code</a>
