--- a/index.html
+++ b/index.html
@@ -102,16 +102,18 @@
   <div class="portfolio-header-text">
     <h2>Featured Full Stack</h2>
   </div>
+  <div class="card-group">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Questival</h5>
         <p class="card-text">MVP multi-route social media platform</p>
         <p class="card-text">express js handlebars sql heroku</p>
-          <a href="https://questival.herokuapp.com/" target="_blank" class="btn btn-primary"
+        <a href="https://questival.herokuapp.com/" target="_blank" class="btn btn-primary"
           style="background:teal; border: 2px solid teal;">see live site</a>
       </div>
     </div>
   </div>
+</div>
 </div>
 </div>
 
